--- a/recommend/templates/recommend/symptom_select.html
+++ b/recommend/templates/recommend/symptom_select.html
@@ -116,7 +116,7 @@
       <fieldset>
           <legend>4. 염증</legend>
           <label><input type="checkbox" name="symptoms" value="피부염">피부염</label>
-          <label><input type="checkbox" name="symptoms" value="구강염">구강염</label>
+          <label><input type="checkbox" name="symptoms" value="구내염">구내염</label>
           <label><input type="checkbox" name="symptoms" value="결막염">결막염</label>
       </fieldset>
 
@@ -128,11 +128,6 @@
           <label><input type="checkbox" name="symptoms" value="신경 안정">신경 안정</label>
       </fieldset>
 
-      <fieldset>
-          <legend>6. 영양제</legend>
-          <label><input type="checkbox" name="symptoms" value="비타민">비타민</label>
-          <label><input type="checkbox" name="symptoms" value="칼슘">칼슘</label>
-      </fieldset>
 
       <button type="submit">💊 추천 받기</button>
   </form>
