--- a/accounts/templates/accounts/mypage.html
+++ b/accounts/templates/accounts/mypage.html
@@ -39,7 +39,7 @@
   .review-title {
       font-size: 1.1rem;
       font-weight: bold;
-      color: #007bff;
+      color: #111111;
       text-decoration: none;
   }
 
@@ -66,7 +66,7 @@
   }
 
   .btn-edit {
-      background-color: #4f8bfd;
+      background-color: #111111;;
       color: #fff;
       border: none;
       padding: 6px 14px;
@@ -78,7 +78,7 @@
   }
 
   .btn-edit:hover {
-      background-color: #3a6ee9;
+      background-color: #111111;;
   }
 
   .btn-delete {
