--- a/search/templates/search/result.html
+++ b/search/templates/search/result.html
@@ -114,7 +114,7 @@
 
     <div class="search-box">
         <form method="get">
-            <input type="text" name="q" placeholder="타이레놀" value="{{ request.GET.q }}">
+            <input type="text" name="q" placeholder="지르텍정" value="{{ request.GET.q }}">
             <button type="submit">검색</button>
         </form>
     </div>
